Revision history for Tesla-API

0.03 UNREL
    - Added api_clear_cache() for methods that need to daisy chain calls, but
      require fresh data between them

0.02    2022-03-18
    - Removed all vehicle related stuff and moved it into a separate subclass
      distribution, Tesla::Vehicle. This distribution will only be for the
      managing of access tokens and speaking to the Tesla API directly
    - Cleaned up documentation about "id" param in new(). The children
      classes must take care of this
    - Added full blown caching mechanism to cache endpoint/id pair data for
      each call through the Tesla API (closes #3)
    - Access tokens now track their own expiry, and auto-refresh when needed
      (closes #2)

0.01    2022-03-16
    - Auto generated distribution with Dist::Mgr
    - Prompt user to authenticate via URL, and to paste new URL back into
      console
    - Auto generate access token, and stash home directory cache
    - Impemented api(), which will use endpoints() for all Tesla API calls
    - Implemented rudimentary vehicle ID handling
    - Implemented initial basic list of API functionality
    - Tesla API endpoints are stored in __DATA__ for the time being